예림 내용 수정

--- a/230316-lsb.html
+++ b/230316-lsb.html
@@ -10,7 +10,7 @@
 <p>((집밥 백선생))은 2015년 5월 19일부터 (tvn)에서 방송 중인 요리 예능 프로그램이다.</p>
 <h2>목차 [숨기기]</h2>
 <ol>
-	<li>출연자</li>
+	<li>출연자</li> <!-- (예림) 출연자옆에 </li>를 아래로 내려야 오류가 안뜨는 것 같아요!! -->
 		<ol>
 			<li>1 이전 출연자</li>
 			<li>2 이전 출연자</li>
@@ -28,6 +28,7 @@
 	<li>윤박</li>
 	<li>이전 출연자</li>
 	<p style="margin: 0;">[편집] 손호준 박정철 바로</p>
+<!-- style을 제대로 몰라가지구..오류가 뜨긴뜨는데 뭐가 문제인지 잘 모르겠네요 ㅠㅠㅠ저는 <br>써서 했답니다!! -->
 </ul>
 <h3>시청률</h3>
 <h3>바깥 고리</h3>
