--- a/230316-lsb.html
+++ b/230316-lsb.html
@@ -19,7 +19,7 @@
 			</ol>
 		</li>
 	<h3>출연자</h3>
-	
+
 	<p>[편집]</p>
 		<ul>
 			<li>백종원</li>
@@ -31,5 +31,6 @@
 		</ul>
 	<h3>시청률</h3>
 	<h3>바깥 고리</h3>
+	<!-- 고생하셨습니다 우리 같이 힘내요!ฅ(๑°▽°๑) -->
 </body>
 </html>
